# mtp-tui

./: Cargo.toml  MTP_RS_GAPS.md  README.md  ROADMAP.md  clippy.toml  justfile
.cursor/rules/: use-just.mdc
examples/: root_handle_test.rs
mtp-rs-patched/: .cargo_vcs_info.json  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.orig  README.md
mtp-rs-patched/examples/: debug_listing.rs  debug_pixel_slow.rs  diagnose.rs  fuji_capture.rs  fuji_rw_check.rs  list_all_usb.rs  list_and_download.rs  ptp_diagnose.rs  test_capture.rs  test_file_ops.rs
mtp-rs-patched/src/: error.rs  lib.rs
mtp-rs-patched/src/mtp/: device.rs  event.rs  mod.rs  object.rs  storage.rs  stream.rs
mtp-rs-patched/src/ptp/: codes.rs  container.rs  device.rs  mod.rs  test_utils.rs
mtp-rs-patched/src/ptp/pack/: datetime.rs  mod.rs
mtp-rs-patched/src/ptp/session/: mod.rs  operations.rs  properties.rs  streaming.rs
mtp-rs-patched/src/ptp/types/: device.rs  mod.rs  objects.rs  properties.rs  storage.rs
mtp-rs-patched/src/transport/: mock.rs  mod.rs  nusb.rs
mtp-rs-patched/tests/: integration.rs
src/: app.rs  backend.rs  config.rs  inspector.rs  main.rs  types.rs  ui.rs
tests/: cli.rs
