[package]
name = "mtp-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytes = "1"
crossterm = "0.29.0"
futures = "0.3"
mtp-rs = "0.13.2"
nusb = "0.2.3"
ratatui = "0.30.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
unicode-width = "0.2"

[dev-dependencies]
rusb = "0.9.4"
